# godot-otel-gdextension

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  PROPOSAL_seamless_godot_integration.md  README.md  Taskfile.yml
.github/workflows/: ci.yml  pages.yml
.tmuxinator/: godot-otel.yml
demo/: project.godot  test_runner.gd  validate_extension.gd
demo/addons/otel/: otel.gdextension
demo/test/integration/: test_otel_e2e.gd  test_otel_installable.gd
demo/test/unit/: test_otel_logger.gd  test_otel_metrics.gd  test_otel_span.gd  test_otel_tracer.gd
site/: go.mod  hugo.toml  package-lock.json  package.json
site/assets/js/: otel.js
site/content/: _index.md
site/content/docs/: _index.md  getting-started.md
site/content/docs/api/: _index.md  logs.md  metrics.md  traces.md
site/layouts/partials/: extend-head.html  otel-head.html
site/static/js/: otel.bundle.js
src/: otel_counter.cpp  otel_counter.h  otel_histogram.cpp  otel_histogram.h  otel_init.cpp  otel_init.h  otel_logger.cpp  otel_logger.h  otel_logger_provider.cpp  otel_logger_provider.h  otel_meter.cpp  otel_meter.h  otel_meter_provider.cpp  otel_meter_provider.h  otel_span.cpp  otel_span.h  otel_tracer.cpp  otel_tracer.h  otel_tracer_provider.cpp  otel_tracer_provider.h  register_types.cpp  register_types.h
